# llama2

./: .gitignore  AGENTS.md  AGENTS_TRD-PRP-1.md  EXECUTION_LOG.md  Full TRDPRP for Automated Legal Dis.md  IMPLEMENTATION_PLAN.md  Justfile  PROJECT_NOTES_2024-05-06.md  PROJECT_NOTES_2025-10-15.md  PROJECT_NOTES_2025-10-16.md  PROJECT_PLAN.md  README.md  ROADMAP.md  TRD-PRP_legal_tech_2.docx  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/backend/: PROJECT_PLAN.md  README.md  pyproject.toml
apps/backend/app/: __init__.py  config.py  database.py  main.py  schemas.py
apps/backend/app/api/routes/: agents.py  ingestion.py  retrieval.py
apps/backend/app/services/: __init__.py  agents.py  classifier.py  graph.py  ingestion.py  ocr.py  parser.py  retrieval.py  storage.py  timeline.py
apps/backend/src/justice_platform/: __init__.py  app.py  config.py  main.py
apps/backend/src/justice_platform/api/: __init__.py
apps/backend/src/justice_platform/api/dependencies/: __init__.py  container.py
apps/backend/src/justice_platform/api/routes/: health.py
apps/backend/src/justice_platform/core/: runtime.py
apps/backend/src/justice_platform/services/: __init__.py  clock.py  container.py
apps/backend/tests/: conftest.py  test_phase2_pipeline.py  test_regressions.py
apps/frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  server.mjs  tailwind.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/frontend/src/: App.test.tsx  App.tsx  index.css  styles.css
apps/frontend/src/components/: HeroPanel.tsx  MilestoneRoadmap.tsx
apps/frontend/src/components/ui/: analyst-card.tsx  toast-demo.tsx
conda/conda-meta/: bzip2-1.0.8-h2bbff1b_6.json  ca-certificates-2025.9.9-haa95532_0.json  expat-2.7.1-h8ddb27b_0.json  history  libffi-3.4.4-hd77b12b_1.json  libzlib-1.3.1-h02ab6af_0.json  openssl-3.0.18-h543e019_0.json  pip-25.2-pyhc872135_0.json  python-3.11.13-h981015d_0.json  setuptools-78.1.1-py311haa95532_0.json  sqlite-3.50.2-hda9a48d_1.json  tk-8.6.15-hf199647_0.json  tzdata-2025b-h04d1e81_0.json  ucrt-10.0.22621.0-haa95532_0.json  vc-14.3-h2df5915_10.json  vc14_runtime-14.44.35208-h4927774_10.json  vs2015_runtime-14.44.35208-ha6b5a95_10.json  wheel-0.45.1-py311haa95532_0.json  xz-5.6.4-h4754444_1.json  zlib-1.3.1-h02ab6af_0.json
conda/etc/: aau_token
docs/: README.md  dev_environment_overhaul_plan.md  development.md  index.md  mkdocs.yml  phase2_agent_orchestrator_fix_plan.md  phase2_build_plan.md  phase2_task_status.md
docs/architecture/: overview.md  pipelines.md
docs/docusaurus/: docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json
docs/docusaurus/docs/: intro.md
docs/docusaurus/src/css/: custom.css
docs/docusaurus/src/pages/: index.tsx
docs/operations/: runbooks.md
docs/phase1/: architecture.md
docs/plans/: infrastructure_observability_plan.md
infra/: README.md
infra/docker/: Dockerfile.dev  backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
infra/helm/platform/: Chart.yaml  values-dev.yaml  values.yaml
infra/helm/platform/templates/: NOTES.txt  _helpers.tpl  argocd.yaml  backend-deployment.yaml  backend-hpa.yaml  backend-ingress.yaml  backend-service.yaml  backend-serviceaccount.yaml  deployment.yaml  frontend-deployment.yaml  frontend-hpa.yaml  frontend-ingress.yaml  frontend-service.yaml  frontend-serviceaccount.yaml  ingress.yaml  namespace.yaml  service.yaml  servicemonitors.yaml  worker-deployment.yaml  worker-hpa.yaml  worker-service.yaml  worker-serviceaccount.yaml
infra/observability/grafana/dashboards/: backend-overview.json  worker-operations.json
infra/observability/opentelemetry/: collector-config.yaml
infra/observability/prometheus/: prometheus.yaml
infra/observability/prometheus/rules/: discovery-recording-rules.yaml
infra/terraform/: backend.tf  main.tf  providers.tf  variables.tf
infra/terraform/envs/dev/: terraform.tfvars
infra/terraform/modules/platform/: main.tf  variables.tf
reports/due_diligence/: 0.1.1.3_gap_analysis_plan.md  gap_analysis.json  gap_analysis.md  repo_inventory.json  repo_inventory.md  traceability_matrix.json  traceability_matrix.md  traceability_overrides.json  trd_requirements.json
scripts/: bootstrap_backend.sh  bootstrap_frontend.sh
tests/: README.md  pyproject.toml
tests/backend/: test_health.py
tests/integration/: conftest.py  test_search.py
tools/: check_workspace_structure.py  gap_analysis.py  repo_inventory.py  traceability_matrix.py
