[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-discovery-backend"
version = "0.1.0"
description = "Lightweight intelligence services for the automated legal discovery platform"
authors = [{name = "Automated Architect"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.22"
]
tests = [
  "pytest>=7.4"
]

[tool.setuptools.packages.find]
where = ["app"]
