[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-discovery-backend"
version = "0.1.0"
description = "Lightweight intelligence services for the automated legal discovery platform"
authors = [{name = "Automated Architect"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.22"
]
tests = [
  "pytest>=7.4"
description = "Phase 2 intelligence and workflow engines for the automated legal discovery platform"
authors = [{name = "Automated Architect"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.22",
  "pydantic>=2.5",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "prefect>=2.14",
  "python-multipart>=0.0.6",
  "watchfiles>=0.21",
  "orjson>=3.9",
  "networkx>=3.2",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "pytesseract>=0.3",
  "pypdf>=4.2",
  "Pillow>=10.2",
  "pypdfium2>=4.22",
  "python-dateutil>=2.8",
  "dateparser>=1.2",
  "nltk>=3.8",
  "tenacity>=8.2",
  "textstat>=0.7",
  "rapidfuzz>=3.6",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
tests = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "httpx>=0.26"
]

[tool.setuptools.packages.find]
where = ["app"]
