[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "legal-discovery-backend"
version = "0.1.0"
description = "Lightweight intelligence services for the automated legal discovery platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Automated Architect" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Legal Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10"
]
dependencies = [
  "dateparser>=1.2",
  "joblib>=1.3",
  "networkx>=3.2",
  "nltk>=3.8",
  "numpy>=1.24",
  "orjson>=3.9",
  "pandas>=2.0",
  "Pillow>=10.2",
  "prefect>=2.14",
  "pydantic-settings>=2.2",
  "pydantic>=2.5",
  "pypdf>=4.2",
  "pypdfium2>=4.22",
  "pytesseract>=0.3",
  "python-dateutil>=2.8",
  "python-multipart>=0.0.6",
  "rapidfuzz>=3.6",
  "scikit-learn>=1.4",
  "sqlalchemy>=2.0",
  "tenacity>=8.2",
  "textstat>=0.7",
  "uvicorn[standard]>=0.22",
  "fastapi>=0.110,<1.0",
  "watchfiles>=0.21",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.22"
]
tests = [
  "httpx>=0.26",
  "pytest-asyncio>=0.21",
  "pytest>=7.4"
]

[tool.poetry]
name = "legal-discovery-backend"
version = "0.1.0"
description = "Lightweight intelligence services for the automated legal discovery platform"
authors = ["Automated Architect"]
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { version = ">=0.110,<1.0" }
uvicorn = { version = ">=0.22", extras = ["standard"] }
pydantic = ">=2.5"
pydantic-settings = ">=2.2"
sqlalchemy = ">=2.0"
prefect = ">=2.14"
python-multipart = ">=0.0.6"
watchfiles = ">=0.21"
orjson = ">=3.9"
networkx = ">=3.2"
scikit-learn = ">=1.4"
joblib = ">=1.3"
numpy = ">=1.24"
pandas = ">=2.0"
pytesseract = ">=0.3"
pypdf = ">=4.2"
Pillow = ">=10.2"
pypdfium2 = ">=4.22"
python-dateutil = ">=2.8"
dateparser = ">=1.2"
nltk = ">=3.8"
tenacity = ">=8.2"
textstat = ">=0.7"
rapidfuzz = ">=3.6"
PyYAML = ">=6.0"
pytest = { version = ">=7.4", optional = true }
pytest-asyncio = { version = ">=0.21", optional = true }
httpx = { version = ">=0.26", optional = true }

[tool.poetry.group.tests.dependencies]
pytest = ">=7.4"
pytest-asyncio = ">=0.21"
httpx = ">=0.26"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
src = ["app", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
plugins = []
ignore_missing_imports = true
strict_optional = true
warn_unused_configs = true
show_error_codes = true
